kubernetes-sharing/emptydir-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-demo
labels:
  name: ubuntu-demo
spec:
  containers:
  - image: ubuntu
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: ubuntu-demo
    volumeMounts:
    - mountPath: /data-mounts
      name: data
  volumes:
  - name: data
    emptyDir: {}
