kubernetes-sharing/staging-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-staging
  labels:
    project: pilot
    environment: staging
    tier: frontend
spec:
  containers:
    -
      image: nginx
      imagePullPolicy: IfNotPresent
      name: nginx-staging
      ports:
      - containerPort: 80
