kubernetes-sharing/single-svc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  backend:
    serviceName: service-pod-demo
    servicePort: 80
